--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,7 @@ input[type=submit] {
   border-bottom: 1px solid #333333;
   border-left: 1px solid #CCCCCC;
 }
+
+.hidden {
+    display: none;
+}
