--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,13 @@ h1 {
     margin-bottom: 20px;
 }
 
+h2 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+
 input[type=text] {
     width: 500px;
     font-size: 20px;
